// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-title-bar ripple"
      disabled={false}
      layout={9999}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-title-bar ripple sc-bwzfXH geSqhw"
        disabled={false}
        style={Object {}}
      >
        <Styled(Label)
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          layout={9999}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Title"
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={null}
          title="Test label text"
          tooltip=""
          visible={true}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 1;
",
            ]
          }
        >
          <Label
            className="ui-title sc-bxivhb cbEtIQ"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={9999}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            useedit={false}
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 1;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <styled.span
                className="ui-label ui-title sc-bxivhb cbEtIQ"
                contentEditable={false}
                disabled={false}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                sizing="normal"
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={true}
              >
                <span
                  className="ui-label ui-title sc-bxivhb cbEtIQ sc-bdVaJa hVJBlF"
                  contentEditable={false}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Styled(Label)>
      </div>
    </styled.div>
  </ThemeProvider>
</Title>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-title-bar ripple"
      disabled={false}
      layout={9999}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-title-bar ripple sc-bwzfXH geSqhw"
        disabled={false}
        style={Object {}}
      >
        <Styled(Label)
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          layout={9999}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Title"
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={null}
          title="Test label text"
          tooltip=""
          visible={true}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 1;
",
            ]
          }
        >
          <Label
            className="ui-title sc-bxivhb cbEtIQ"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={9999}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            useedit={false}
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 1;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <styled.span
                className="ui-label ui-title sc-bxivhb cbEtIQ"
                contentEditable={false}
                disabled={false}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                sizing="normal"
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={true}
              >
                <span
                  className="ui-label ui-title sc-bxivhb cbEtIQ sc-bdVaJa hVJBlF"
                  contentEditable={false}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Styled(Label)>
      </div>
    </styled.div>
  </ThemeProvider>
</Title>
`;

exports[`Test creation of a Title control with default props 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple test-class"
    disabled={false}
    layout={5}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget={null}
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 5;
",
        ]
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={1}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={1}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <styled.div
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={1}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 1;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={6}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={6}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget={null}
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={0}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={0}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <styled.div
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={0}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 3;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={4}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={4}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	display: block;
",
        ]
      }
    />
    <styled.div
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={4}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	display: block;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={3}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={3}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <styled.div
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={3}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 2;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={2}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      className="ui-title"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={2}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 3;
",
        ]
      }
    />
    <styled.div
      className="ui-title-widget"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={2}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 1;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-title-bar"
      disabled={true}
      layout={5}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-title-bar sc-bwzfXH gNnfOr"
        disabled={true}
        style={Object {}}
      >
        <Styled(Label)
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          id=""
          layout={5}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Title"
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={null}
          title="Test label text"
          tooltip=""
          visible={true}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 5;
",
            ]
          }
        >
          <Label
            className="ui-title sc-bxivhb gnXhnZ"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            id=""
            layout={5}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            useedit={false}
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 5;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <styled.span
                className="ui-label ui-title sc-bxivhb gnXhnZ"
                contentEditable={false}
                disabled={true}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                sizing="normal"
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={true}
              >
                <span
                  className="ui-label ui-title sc-bxivhb gnXhnZ sc-bdVaJa eJygKk"
                  contentEditable={false}
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Styled(Label)>
      </div>
    </styled.div>
  </ThemeProvider>
</Title>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-title-bar ripple"
      disabled={false}
      layout={5}
      style={Object {}}
      visible={false}
    >
      <div
        className="ui-title-bar ripple sc-bwzfXH cTWvZa"
        disabled={false}
        style={Object {}}
      >
        <Styled(Label)
          className="ui-title"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          id=""
          layout={5}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Title"
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          text="Test label text"
          theme={null}
          title="Test label text"
          tooltip=""
          visible={false}
          widget={null}
          width=""
          xcss={
            Array [
              "
	text-align: left;
	flex: 5;
",
            ]
          }
        >
          <Label
            className="ui-title sc-bxivhb gnXhnZ"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={5}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            useedit={false}
            visible={false}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 5;
",
              ]
            }
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <styled.span
                className="ui-label ui-title sc-bxivhb gnXhnZ"
                contentEditable={false}
                disabled={false}
                innerRef={[Function]}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                sizing="normal"
                style={Object {}}
                suppressContentEditableWarning={true}
                visible={false}
              >
                <span
                  className="ui-label ui-title sc-bxivhb gnXhnZ sc-bdVaJa gMjxKT"
                  contentEditable={false}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDoubleClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  style={Object {}}
                  suppressContentEditableWarning={true}
                >
                  Test label text
                </span>
              </styled.span>
            </ThemeProvider>
          </Label>
        </Styled(Label)>
      </div>
    </styled.div>
  </ThemeProvider>
</Title>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "layout": 5,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Title",
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;
